--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
         </form>
         <ul id="todo-list"></ul>
     </main>
-    
-    <script src="app.js"></script>
+
+    <script src="../src/app.js"></script>
 </body>
 
 </html>
