--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <ul id="todo-list"></ul>
     </main>
 
-    <script src="../src/app.ts"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
